iac_benchmark/single_root_templates/brokedba__terraform-examples/terraform-provider-gcp__create-vpc.tf
# ── variables.tf ──────────────────────────────────────────
# GCP Service account region and authentication
# variable "prefix" {
#  description = "The prefix used for all resources in this example"
#}
variable  "gcp_credentials"{
  description = "default location of your service account json key file"
  default = "~/gcp-key.json"
}

variable "project" {
  default = "playground-s-11-83a5e4fc"
}
variable "region" {
    default = "us-east1"
}

variable "zone" {
    default = "us-east1-b"
}
# VPC INFO
variable "vnet_name" {
      default = "Terravpc"
    }

variable "subnet-02_cidr" {
      default = "192.168.0.0/16"
    }

# SUBNET INFO
    variable "subnet_name"{
      default = "terrasub"
      }

    variable "subnet_cidr"{
      default = "192.168.10.0/24"
      }
  variable "firewall_name" {
    default = "terra_fw"
  }

# ── outputs.tf ──────────────────────────────────────────
output "vpc_name" {
  description = "The Name of the newly created vpc"
  value       = google_compute_network.terra_vpc.name
}
#output "vpc_id" {
#      description = "id of created vpc. "
#      value       = google_compute_network.terra_vpc.id
#    }

output "Subnet_Name" {
      description = "Name of created vpc's Subnet. "
      value       =  google_compute_subnetwork.terra_sub.name
    }
output "Subnet_id" {
      description = "id of created vpc. "
      value       = google_compute_subnetwork.terra_sub.id
    }
output "Subnet_CIDR" {
      description = "cidr block of vpc's Subnet. "
      value       = google_compute_subnetwork.terra_sub.ip_cidr_range
    }

output "firewall_Name" {
       description = "Security Group Name. "
       value       = google_compute_firewall.web-server.name
   }

output "fire_wall_rules" {
      description = "Shows ingress rules of the Security group "
     value       = google_compute_firewall.web-server.allow
}

output "secondary_sub_ip_range"
      description = "Shows ingress rules of the Security group "
      value       = google_compute_subnetwork.terra_sub.secondary_ip_range
}

# ── vpc.tf ──────────────────────────────────────────
provider "google" {
    credentials = file(var.gcp_credentials)
    project = var.project
    region  = var.region
    zone    = var.zone
  }
#################
# PROJECT
#################
data "google_client_config" "current" {

}
#variable "project_id" {
#  default = data.google_client_config.current.project
#}

############################
# SERVICE ACCOUNT (OPTIONAL)
############################
# Note: The user running terraform needs to have the IAM Admin role assigned to them before you can do this.
# resource "google_service_account" "instance_admin" {
#  account_id   = "instance-admin"
#  display_name = "instance s-account"
#  }
# resource "google_project_iam_binding" "instance_sa_iam" {
#  project = data.google_client_config.current.project # < PROJECT ID>
#  role    = "roles/compute.instanceAdmin.v1"
#  members = [
#    "serviceAccount:${google_service_account.instance_admin.email}"
#  ]

#################
# VPC
#################

resource "google_compute_network" "terra_vpc" {
    project   = data.google_client_config.current.project
    name = "terra-vpc"
    auto_create_subnetworks = false
    mtu                     = 1460
    }

#################
# SUBNET
#################
resource "google_compute_subnetwork" "terra_sub" {
  name          = "terra-sub"
  ip_cidr_range = var.subnet_cidr
  region        = var.region
  network       = google_compute_network.terra_vpc.name
  description   = "This is a custom subnet "
  private_ip_google_access = "true"
  log_config {
    aggregation_interval = "INTERVAL_10_MIN"
    flow_sampling        = 0.5
    metadata             = "INCLUDE_ALL_METADATA"
  }

    secondary_ip_range {
                range_name    = "subnet-01-secondary-01"
                ip_cidr_range = "192.168.64.0/24"
            }

}
######################
# Firewall
######################
# web network tag
resource "google_compute_firewall" "web-server" {
  project     = data.google_client_config.current.project  # you can Replace this with your project ID in quotes var.project_id
  name        = "allow-http-rule"
  network     = google_compute_network.terra_vpc.name
  description = "Creates firewall rule targeting tagged instances"

  allow {
    protocol = "tcp"
    ports    = ["80","22","443","3389"]
         }
   source_ranges = ["0.0.0.0/0"]
   target_tags = ["web-server"]
    timeouts {}
}

output "project" {
  value = "${data.google_client_config.current.project}"
}
